changed background images to automatically switch color depending on white/black theme

--- a/BrewingApp/Views/EditHop.xaml
+++ b/BrewingApp/Views/EditHop.xaml
@@ -18,7 +18,10 @@
 
 
     <!--LayoutRoot ist das Stammraster, in dem alle anderen Seiteninhalte platziert werden-->
-    <Grid x:Name="LayoutRoot" Background="Transparent">
+    <Grid 
+        x:Name="LayoutRoot" 
+        Background="Transparent">
+        
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -30,10 +33,11 @@
         </Grid.Resources>
         
         <StackPanel>
+
             <!--TitlePanel enthält den Namen der Anwendung und den Seitentitel-->
-        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock x:Name="PageTitle" Text="Edit Hop" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
-        </StackPanel>
+            <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
+                <TextBlock x:Name="PageTitle" Text="Edit Hop" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            </StackPanel>
 
             <toolkit:ListPicker 
                 HorizontalContentAlignment="Stretch"
