--- a/BrewingApp/Views/PivotConverters.xaml
+++ b/BrewingApp/Views/PivotConverters.xaml
@@ -18,14 +18,21 @@
 
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot">
-        <Grid.Background>
-            <ImageBrush 
-                ImageSource="/BrewingApp;component/Images/icon_scales_big.png" 
-                AlignmentX="Right" 
-                AlignmentY="Bottom" 
-                Stretch="None" 
-                Opacity="0.5" />
-        </Grid.Background>
+
+        <!-- background -->
+        <Rectangle
+            Fill="{StaticResource PhoneForegroundBrush}" 
+            VerticalAlignment="Bottom"
+            HorizontalAlignment="Right"
+            Width="250"
+            Height="250">
+                <Rectangle.OpacityMask>
+                    <ImageBrush 
+                        ImageSource="/BrewingApp;component/Images/icon_scales_big.png" 
+                        Opacity="0.5" />
+                </Rectangle.OpacityMask>
+        </Rectangle>
+
         <!--Pivot Control-->
         <controls:Pivot Title="Unit Converters" Name="ConverterPivot">
             <!--Pivot TEMPERATURE-->
