changed all namespaces to BrewBuddy

--- a/BrewingApp/App.xaml
+++ b/BrewingApp/App.xaml
@@ -4,7 +4,7 @@
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone" 
     xmlns:tk="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
-    x:Class="BrewingApp.App"
+    x:Class="BrewBuddy.App"
     >
 
     <!--Application Resources-->
