--- a/BrewingApp/Views/PivotSettings.xaml
+++ b/BrewingApp/Views/PivotSettings.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="BrewingApp.Views.PivotSettings"
+    x:Class="BrewBuddy.Views.PivotSettings"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -40,7 +40,7 @@
             Height="250">
                 <Rectangle.OpacityMask>
                     <ImageBrush 
-                        ImageSource="/BrewingApp;component/Images/icon_gears_big.png" 
+                        ImageSource="/BrewBuddy;component/Images/icon_gears_big.png" 
                         Opacity="0.5" />
                 </Rectangle.OpacityMask>
         </Rectangle>
