--- a/BrewingApp/MainPage.xaml
+++ b/BrewingApp/MainPage.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="BrewingApp.MainPage"
+    x:Class="BrewBuddy.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -44,7 +44,7 @@
                         Grid.Column="0"
                         Margin="12,12,0,0"
                         Title="Brew &#13;House"
-                        Source="/BrewingApp;component/Images/icon_flask_small.png"
+                        Source="/BrewBuddy;component/Images/icon_flask_small.png"
                         Tap="HubTile_Tap" 
                         Name="BrewHouseTile">
                 </toolkit:HubTile>
@@ -53,7 +53,7 @@
                         Grid.Column="1" 
                         Margin="12,12,0,0"
                         Title="Hops" 
-                        Source="/BrewingApp;component/Images/icon_hops_small.png"
+                        Source="/BrewBuddy;component/Images/icon_hops_small.png"
                         Tap="HubTile_Tap" 
                         Name="HopsTile" />
                     <toolkit:HubTile 
@@ -62,20 +62,20 @@
                         Margin="12,12,0,0"
                         Title="Convert &#13;Units" 
                         Tap="HubTile_Tap"
-                        Source="/BrewingApp;component/Images/icon_scales_small.png"
+                        Source="/BrewBuddy;component/Images/icon_scales_small.png"
                         Name="ConvertersTile" />
                     <toolkit:HubTile 
                         Grid.Row="1" 
                         Grid.Column="1" 
                         Margin="12,12,0,0"
-                        Source="/BrewingApp;component/Images/icon_grains_small.png"
+                        Source="/BrewBuddy;component/Images/icon_grains_small.png"
                         Title="Malts" 
                         Tap="HubTile_Tap" 
                         Name="MaltsTile" />
                     <toolkit:HubTile 
                         Grid.Row="2" 
                         Grid.Column="0" 
-                        Source="/BrewingApp;component/Images/icon_gears_small.png"
+                        Source="/BrewBuddy;component/Images/icon_gears_small.png"
                         Margin="12,12,0,0"
                         Title="Settings" 
                         Tap="HubTile_Tap" 
