--- a/BrewingApp/Views/PivotBrewHouse.xaml
+++ b/BrewingApp/Views/PivotBrewHouse.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="BrewingApp.Pages.PivotPage1"
+    x:Class="BrewBuddy.Pages.PivotPage1"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -8,7 +8,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
-    xmlns:local="clr-namespace:BrewingApp.Converters"
+    xmlns:local="clr-namespace:BrewBuddy.Converters"
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
@@ -28,7 +28,7 @@
             Height="250">
                 <Rectangle.OpacityMask>
                     <ImageBrush 
-                        ImageSource="/BrewingApp;component/Images/icon_flask_big.png" 
+                        ImageSource="/BrewBuddy;component/Images/icon_flask_big.png" 
                         Opacity="0.5" />
                 </Rectangle.OpacityMask>
         </Rectangle>
