--- a/BrewingApp/Views/PivotHops.xaml
+++ b/BrewingApp/Views/PivotHops.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="BrewingApp.Pages.PivotHops"
+    x:Class="BrewBuddy.Pages.PivotHops"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -9,7 +9,7 @@
     xmlns:sh="clr-namespace:WPExtensions;assembly=WPExtensions"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:local="clr-namespace:BrewingApp.Converters"
+    xmlns:local="clr-namespace:BrewBuddy.Converters"
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
@@ -54,7 +54,7 @@
         Height="250">
             <Rectangle.OpacityMask>
                 <ImageBrush 
-                    ImageSource="/BrewingApp;component/Images/icon_hops_big.png" 
+                    ImageSource="/BrewBuddy;component/Images/icon_hops_big.png" 
                     Opacity="0.5" />
             </Rectangle.OpacityMask>
         </Rectangle>
@@ -177,7 +177,7 @@
 
                                             <TextBlock
                                                 Text="{Binding Amount, Converter={StaticResource WeightConverter}, StringFormat=' {0,2:f2}'}" 
-                                                Margin="10,0,5,0"
+                                                Margin="10,0,0,0"
                                                 Style="{StaticResource PhoneTextNormalStyle}"/>
                                             <TextBlock
                                                 Text="{Binding ., Converter={StaticResource UnitExtension}, ConverterParameter='Weight'}"
