--- a/BrewingApp/Views/PivotMalts.xaml
+++ b/BrewingApp/Views/PivotMalts.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="BrewingApp.Pages.PivotMalts"
+    x:Class="BrewBuddy.Pages.PivotMalts"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -8,7 +8,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
     xmlns:sh="clr-namespace:WPExtensions;assembly=WPExtensions"
-    xmlns:local="clr-namespace:BrewingApp.Converters"
+    xmlns:local="clr-namespace:BrewBuddy.Converters"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
@@ -39,7 +39,7 @@
             Height="250">
                 <Rectangle.OpacityMask>
                     <ImageBrush 
-                        ImageSource="/BrewingApp;component/Images/icon_grains_big.png" 
+                        ImageSource="/BrewBuddy;component/Images/icon_grains_big.png" 
                         Opacity="0.5" />
                 </Rectangle.OpacityMask>
         </Rectangle>
@@ -152,7 +152,7 @@
 
                                                     <TextBlock
                                                         Text="{Binding Amount, Converter={StaticResource WeightConverter},StringFormat=' {0:f2}'}" 
-                                                        Margin="10,0,5,0"
+                                                        Margin="10,0,0,0"
                                                         Style="{StaticResource PhoneTextNormalStyle}"/>
                                                     <TextBlock
                                                         Text="{Binding ., Converter={StaticResource UnitExtension}, ConverterParameter='Weight'}"
